--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
 	<groupId>in.javahome</groupId>
 	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1</version>
+	<version>0.0.3</version>
 	<name>my-app</name>
+
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
@@ -13,7 +14,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
-			<scope>provided</scope>
+			<!-- <scope>provided</scope> -->
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -23,6 +24,17 @@
 		</dependency>
 	
 	</dependencies>
+	<distributionManagement>
+		 <snapshotRepository>
+		    <id>nexus</id>
+		    <url>http://172.31.17.173:8081/repository/maven-snapshots/</url>
+		 </snapshotRepository>
+		
+		<repository>
+		    <id>nexus</id>
+		    <url>http://172.31.17.173:8081/repository/maven-releases/</url>
+		</repository>
+  	</distributionManagement>
 	
 <build>
     <plugins>
